Attempt to fix font size of index.html heading on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
 
 h1 {
     text-align: center;
-    font-size: 5rem;
     color: chartreuse;
     font-family: 'Codystar', cursive;
 }
